--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,37 @@
+buildscript {
+	repositories {
+		mavenLocal()
+		mavenCentral()
+	}
+
+	dependencies {
+		classpath "gradle.plugin.aspectj:gradle-aspectj:0.1.6"
+	}
+
+}
+
+
 plugins {
 	id 'org.springframework.boot' version '2.3.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+
 }
+apply plugin: "aspectj.gradle"
+project.ext {
+	aspectjVersion = '1.9.5'
+}
+
+
+
 
 group = 'com.rhinh'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
+
+
 
 configurations {
 	compileOnly {
@@ -15,6 +40,7 @@ configurations {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -27,6 +53,7 @@ dependencies {
 	implementation 'org.aspectj:aspectjrt:1.9.5'
 	implementation 'org.aspectj:aspectjweaver:1.9.5'
 	implementation 'org.aspectj:aspectjtools:1.9.5'
+	implementation 'com.ford.griffin:logging-core:3.3.0-sxn-SNAPSHOT'
 
 	compileOnly 'org.projectlombok:lombok'
 
